// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`click to preview image 1`] = `
<div
  class="van-image-preview"
  name="van-fade"
>
  <div
    class="van-swipe"
  >
    <div
      class="van-swipe__track"
      style="width: 0px; transition-duration: 0ms; transform: translateX(0px);"
    >
      <div
        class="van-swipe-item"
        style="width: 0px; height: 100%; transform: translateX(0px);"
      >
        <img
          class="van-image-preview__image"
          src="https://img.yzcdn.cn/vant/cat.jpeg"
          style="transition: .3s all;"
        />
      </div>
      <div
        class="van-swipe-item"
        style="width: 0px; height: 100%; transform: translateX(0px);"
      >
        <img
          class="van-image-preview__image"
          src="data:image/test"
        />
      </div>
    </div>
  </div>
  <div
    class="van-image-preview__index"
  >
    1/2
  </div>
</div>
`;

exports[`delete preview image 1`] = `
<div class="van-uploader">
  <div class="van-uploader__wrapper">
    <div class="van-uploader__upload" style="width: 30px; height: 30px;"><i class="van-icon van-icon-plus van-uploader__upload-icon">
        <!----></i><input type="file" accept="image/*" class="van-uploader__input"></div>
  </div>
</div>
`;

exports[`disable preview image 1`] = `
<div class="van-uploader">
  <div class="van-uploader__wrapper">
    <div class="van-uploader__upload"><i class="van-icon van-icon-plus van-uploader__upload-icon">
        <!----></i><input type="file" accept="image/*" class="van-uploader__input"></div>
  </div>
</div>
`;

exports[`max-count prop 1`] = `
<div class="van-uploader">
  <div class="van-uploader__wrapper">
    <div class="van-uploader__preview">
      <div class="van-image van-uploader__preview-image"><img src="data:image/test" class="van-image__img" style="object-fit: cover;">
        <div class="van-image__loading"><i class="van-icon van-icon-photo-o" style="font-size: 22px;">
            <!----></i></div>
      </div><i class="van-icon van-icon-delete van-uploader__preview-delete">
        <!----></i>
    </div>
  </div>
</div>
`;

exports[`preview-size prop 1`] = `
<div class="van-uploader">
  <div class="van-uploader__wrapper">
    <div class="van-uploader__preview" style="">
      <div class="van-image van-uploader__preview-image" style="width: 30px; height: 30px;"><img src="data:image/test" class="van-image__img" style="object-fit: cover;">
        <div class="van-image__loading"><i class="van-icon van-icon-photo-o" style="font-size: 22px;">
            <!----></i></div>
      </div><i class="van-icon van-icon-delete van-uploader__preview-delete">
        <!----></i>
    </div>
    <div class="van-uploader__upload" style="width: 30px; height: 30px;"><i class="van-icon van-icon-plus van-uploader__upload-icon">
        <!----></i><input type="file" accept="image/*" class="van-uploader__input"></div>
  </div>
</div>
`;

exports[`render preview image 1`] = `
<div class="van-uploader">
  <div class="van-uploader__wrapper">
    <div class="van-uploader__preview">
      <div class="van-image van-uploader__preview-image"><img src="https://img.yzcdn.cn/vant/cat.jpeg" class="van-image__img" style="object-fit: cover;">
        <div class="van-image__loading"><i class="van-icon van-icon-photo-o" style="font-size: 22px;">
            <!----></i></div>
      </div><i class="van-icon van-icon-delete van-uploader__preview-delete">
        <!----></i>
    </div>
    <div class="van-uploader__preview">
      <div class="van-uploader__file"><i class="van-icon van-icon-description van-uploader__file-icon">
          <!----></i>
        <div class="van-uploader__file-name van-ellipsis">https://img.yzcdn.cn/vant/test.pdf</div>
      </div><i class="van-icon van-icon-delete van-uploader__preview-delete">
        <!----></i>
    </div>
    <div class="van-uploader__preview">
      <div class="van-uploader__file"><i class="van-icon van-icon-description van-uploader__file-icon">
          <!----></i>
        <div class="van-uploader__file-name van-ellipsis">test.pdf</div>
      </div><i class="van-icon van-icon-delete van-uploader__preview-delete">
        <!----></i>
    </div>
    <div class="van-uploader__preview">
      <div class="van-image van-uploader__preview-image"><img src="data:image/test" class="van-image__img" style="object-fit: cover;">
        <div class="van-image__loading"><i class="van-icon van-icon-photo-o" style="font-size: 22px;">
            <!----></i></div>
      </div><i class="van-icon van-icon-delete van-uploader__preview-delete">
        <!----></i>
    </div>
    <div class="van-uploader__upload"><i class="van-icon van-icon-plus van-uploader__upload-icon">
        <!----></i><input type="file" accept="image/*" class="van-uploader__input"></div>
  </div>
</div>
`;

exports[`render upload-text 1`] = `
<div class="van-uploader">
  <div class="van-uploader__wrapper">
    <div class="van-uploader__upload"><i class="van-icon van-icon-plus van-uploader__upload-icon">
        <!----></i><span class="van-uploader__upload-text">Text</span><input type="file" accept="image/*" class="van-uploader__input"></div>
  </div>
</div>
`;
